--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ repositories {
 dependencies {
     testImplementation 'org.seleniumhq.selenium:selenium-java:4.31.0'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.12.1' 
-    implementation 'com.mailslurp:mailslurp-client:15.19.22'
+    implementation group: 'com.mailslurp', name: 'mailslurp-client-java', version: '15.19.22'
 }
 
 test {
